--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,8 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MovieApp">
-        <activity android:name=".ui.detail.ActivityMovieDetails"><!--</activity>
-        <activity android:name=".ui.movieslist.ActivityMovieList">-->
+        <activity android:name=".ui.detail.ActivityMovieDetails">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
